@@ -1,34 +1,42 @@
 package io.onedev.server.commandhandler;
 
 import com.google.common.base.Joiner;
+import com.google.common.base.Splitter;
 import io.onedev.commons.bootstrap.Bootstrap;
 import io.onedev.commons.loader.AbstractPlugin;
+import io.onedev.commons.utils.ExplicitException;
 import io.onedev.commons.utils.FileUtils;
 import io.onedev.commons.utils.StringUtils;
 import io.onedev.commons.utils.command.Commandline;
 import io.onedev.commons.utils.command.LineConsumer;
 import io.onedev.server.OneDev;
-import io.onedev.server.migration.DataMigrator;
-import io.onedev.server.migration.MigrationHelper;
+import io.onedev.server.data.migration.DataMigrator;
+import io.onedev.server.data.migration.MigrationHelper;
 import io.onedev.server.persistence.HibernateConfig;
 import io.onedev.server.security.SecurityUtils;
+import io.onedev.server.util.ExceptionUtils;
 import org.apache.commons.lang3.SystemUtils;
+import org.apache.commons.lang3.math.NumberUtils;
 import org.joda.time.DateTime;
 import org.joda.time.format.DateTimeFormat;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import javax.annotation.Nullable;
 import javax.inject.Singleton;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
-import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.Callable;
 
+import static io.onedev.server.persistence.PersistenceUtils.*;
+import static java.lang.Integer.parseInt;
+import static java.lang.String.valueOf;
+import static java.nio.charset.StandardCharsets.UTF_8;
+import static org.apache.commons.io.FileUtils.writeStringToFile;
 import static org.hibernate.cfg.AvailableSettings.DIALECT;
 
 @Singleton
@@ -42,13 +50,17 @@ public class Upgrade extends AbstractPlugin {
 	
 	public static final String DB_BACKUP_DIR = "db-backup";
 	
+	private static final String INCOMPATIBILITIES_DIR = "incompatibilities";
+	
 	private static final String RELEASE_PROPS_FILE = "release.properties";
 	
-	public static final String INCOMPATIBILITIES = "incompatibilities/incompatibilities.md";
+	public static final String INCOMPATIBILITIES_FILE = INCOMPATIBILITIES_DIR + "/incompatibilities.md";
 	
-	public static final String INCOMPATIBILITIES_SINCE_UPGRADED_VERSION = "incompatibilities/since-upgraded-version.md"; 
+	public static final String INCOMPATIBILITIES_SINCE_UPGRADED_VERSION_FILE = INCOMPATIBILITIES_DIR + "/since-upgraded-version.md"; 
 	
-	public static final String CHECKED_INCOMPATIBILITIES_SINCE_UPGRADED_VERSION = "incompatibilities/checked-since-upgraded-version.md"; 
+	public static final String CHECKED_INCOMPATIBILITIES_SINCE_UPGRADED_VERSION_FILE = INCOMPATIBILITIES_DIR + "/checked-since-upgraded-version.md"; 
+	
+	private File upgradeDir;
 	
 	protected Commandline buildCommandline(File upgradeDir, String command, String...commandArgs) {
 		String version = loadReleaseProps(new File(upgradeDir, RELEASE_PROPS_FILE)).getProperty("version");
@@ -69,7 +81,7 @@ public class Upgrade extends AbstractPlugin {
 		
 		String bootstrapClass;
 		if (version.startsWith("1.0-EAP")) {
-			int build = Integer.parseInt(StringUtils.substringAfterLast(version, "build"));
+			int build = parseInt(StringUtils.substringAfterLast(version, "build"));
 			if (build <= 26)
 				bootstrapClass = "com.gitplex.commons.bootstrap.Bootstrap";
 			else
@@ -116,6 +128,7 @@ public class Upgrade extends AbstractPlugin {
 				"--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
 				"--add-opens=java.management/sun.management=ALL-UNNAMED",
 				"--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+				"--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
 				"-classpath", "*", bootstrapClass, 
 				command);
 		cmdline.addArgs(commandArgs);
@@ -143,20 +156,28 @@ public class Upgrade extends AbstractPlugin {
 			return new Properties();
 	}
 	
-	private int getDataVersion(File upgradeDir) {
-		AtomicInteger oldDataVersion = new AtomicInteger(0);
+	private DataVersion getDataVersion(File upgradeDir) {
+		var dataVersion = new DataVersion();
 
-		int ret = buildCommandline(upgradeDir, "check-data-version").execute(new LineConsumer() {
+		buildCommandline(upgradeDir, "check-data-version").execute(new LineConsumer() {
 
 			 @Override
 			 public void consume(String line) {
-				 String prefix = "Data version: ";
-				 if (line.startsWith(prefix)) {
-					 oldDataVersion.set(Integer.parseInt(line.substring(prefix.length())));
-					 logger.info("Data version: " + oldDataVersion.get());
-				 } else {
-					 logger.info(prefixUpgradeTargetLog(line));
-				 }
+				if (line.startsWith("Data version: ")) {
+					var value = parseInt(line.substring("Data version: ".length()));
+					dataVersion.app = dataVersion.db = value;
+				} else if (line.contains("Database is not populated yet")) {
+					dataVersion.db = 0;
+				} else if (line.contains("Data version mismatch")) {
+					var temp = StringUtils.substringAfter(line, "app data version: ");
+					var appDataVersion = parseInt(StringUtils.substringBefore(temp, ","));
+					temp = StringUtils.substringAfter(line, "db data version: ");
+					var dbDataVersion = parseInt(StringUtils.substringBefore(temp, ")"));
+					dataVersion.app = appDataVersion;
+					dataVersion.db = dbDataVersion;
+				} else {
+					logger.info(prefixUpgradeTargetLog(line));
+				}
 			 }
 
 		 }, new LineConsumer() {
@@ -166,12 +187,9 @@ public class Upgrade extends AbstractPlugin {
 				 logger.error(prefixUpgradeTargetLog(line));
 			 }
 			 
-		}).getReturnCode();
+		});
 		
-		if (ret != 0)
-			return -1;
-		else 
-			return oldDataVersion.get();
+		return dataVersion;
 	}
 	
 	@Override
@@ -184,7 +202,7 @@ public class Upgrade extends AbstractPlugin {
 			System.exit(1);
 		}
 		
-		File upgradeDir = new File(Bootstrap.command.getArgs()[0]);
+		upgradeDir = new File(Bootstrap.command.getArgs()[0]);
 		if (!upgradeDir.isAbsolute() && System.getenv("WRAPPER_INIT_DIR") != null)
 			upgradeDir = new File(System.getenv("WRAPPER_INIT_DIR"), upgradeDir.getPath());
 		
@@ -213,21 +231,22 @@ public class Upgrade extends AbstractPlugin {
 						upgradeDir.getAbsolutePath());
 				System.exit(1);
 			}
-			
+
 			Properties releaseProps = loadReleaseProps(new File(Bootstrap.installDir, RELEASE_PROPS_FILE));
 			Properties oldReleaseProps = loadReleaseProps(new File(upgradeDir, RELEASE_PROPS_FILE));
-			
+
 			if (!releaseProps.equals(oldReleaseProps)) {
+				var inDocker = new File(upgradeDir, "IN_DOCKER").exists();				
 				logger.info("Upgrading {}...", upgradeDir.getAbsolutePath());
-				
-				if (OneDev.isServerRunning(upgradeDir) || OneDev.isServerRunning(Bootstrap.installDir)) {
+
+				if (OneDev.isServerRunning(upgradeDir)) {
 					logger.error("Please stop server before upgrading");
 					System.exit(1);
 				}
 
-				for (File file: new File(upgradeDir, "lib").listFiles()) {
-					if (file.getName().contains("mariadb") || file.getName().contains("mysql") 
-							|| file.getName().contains("ojdbc") || file.getName().contains("postgresql") 
+				for (File file : new File(upgradeDir, "lib").listFiles()) {
+					if (file.getName().contains("mariadb") || file.getName().contains("mysql")
+							|| file.getName().contains("ojdbc") || file.getName().contains("postgresql")
 							|| file.getName().contains("sqljdbc")) {
 						try {
 							File destDir = new File(upgradeDir, "site/lib");
@@ -239,260 +258,287 @@ public class Upgrade extends AbstractPlugin {
 						}
 					}
 				}
-				
+
 				File statusDir = new File(upgradeDir, "status");
 				if (statusDir.exists())
 					FileUtils.cleanDir(statusDir);
 
 				try {
-					if (new File(upgradeDir, "sampledb").exists() 
-							&& !new File(upgradeDir, "internaldb").exists()) { 
+					if (new File(upgradeDir, "sampledb").exists()
+							&& !new File(upgradeDir, "internaldb").exists()) {
 						FileUtils.moveDirectory(
-								new File(upgradeDir, "sampledb"), 
+								new File(upgradeDir, "sampledb"),
 								new File(upgradeDir, "internaldb"));
 					}
 
 					File hibernatePropsFile = new File(upgradeDir, "conf/hibernate.properties");
-					String hibernateProps = FileUtils.readFileToString(hibernatePropsFile, StandardCharsets.UTF_8);
+					String hibernateProps = FileUtils.readFileToString(hibernatePropsFile, UTF_8);
 					if (hibernateProps.contains("sampledb")) {
 						hibernateProps = StringUtils.replace(hibernateProps, "sampledb", "internaldb");
-						FileUtils.writeStringToFile(hibernatePropsFile, hibernateProps, StandardCharsets.UTF_8);
+						writeStringToFile(hibernatePropsFile, hibernateProps, UTF_8);
 					}
 				} catch (IOException e) {
 					throw new RuntimeException(e);
 				}
-
-				int oldDataVersion = getDataVersion(upgradeDir);
-				if (oldDataVersion == -1) {
-					logger.error("Unable to upgrade specified installation due to above error");
-					System.exit(1);
-				}
 				
-				int newDataVersion = Integer.parseInt(MigrationHelper.getVersion(DataMigrator.class));
-				
-				if (oldDataVersion > newDataVersion) {
-					logger.error("OneDev program is too old, please use a newer version");
-					System.exit(1);
-				}
-				
-				String timestamp = DateTimeFormat.forPattern(BACKUP_DATETIME_FORMAT).print(new DateTime());
-				File programBackup = new File(upgradeDir, "site/program-backup/" + timestamp);
-				FileUtils.createDir(programBackup);
-				
-				logger.info("Backing up old program files as {}...", programBackup.getAbsolutePath());
 				try {
-					for (File each: upgradeDir.listFiles()) {
-						if (each.isFile()) {
-							FileUtils.copyFileToDirectory(each, programBackup);
-						} else if (!each.getName().equals("temp") 
-								&& !each.getName().equals("site") 
-								&& !each.getName().equals("internaldb")) {
-							FileUtils.copyDirectoryToDirectory(each, programBackup);
-						}
-					}
-				} catch (IOException e) {
-					throw new RuntimeException(e);
-				}
-				restoreExecutables(programBackup);
-				
-				File dbBackupFile = new File(upgradeDir, "site/" + DB_BACKUP_DIR + "/" + timestamp + ".zip");
-				boolean isHSQL = HibernateConfig.isHSQLDialect(getDialect(upgradeDir));
-				boolean failed = false;
-				boolean dbChanged = false;
-				boolean dbCleaned = false;
-				try {
-					if (oldDataVersion != newDataVersion) {
-						logger.info("Backing up database as {}...", dbBackupFile.getAbsolutePath());
-						
-						FileUtils.createDir(dbBackupFile.getParentFile());
-
-						int ret = buildCommandline(upgradeDir, "backup-db", dbBackupFile.getAbsolutePath()).execute(new LineConsumer() {
-
-							@Override
-							public void consume(String line) {
-								logger.info(prefixUpgradeTargetLog(line));
-							}
+					var callable = new Callable<Void>() {
+						@Override
+						public Void call() {
+							var newAppDataVersion = parseInt(MigrationHelper.getVersion(DataMigrator.class));
+							var dataVersion = getDataVersion(upgradeDir);
+							var oldAppDataVersion = dataVersion.app;
+							var dbDataVersion = dataVersion.db;
+							if (dbDataVersion == 0) 
+								throw new ExplicitException("Unable to upgrade specified installation as database is not populated yet");
+							if (dbDataVersion == -1) 
+								throw new ExplicitException("Unable to upgrade specified installation due to above error");
+							if (dbDataVersion != oldAppDataVersion && dbDataVersion != newAppDataVersion) 
+								throw new ExplicitException("Unable to upgrade specified installation as data version of application and database is not the same");
+							if (newAppDataVersion < oldAppDataVersion) 
+								throw new ExplicitException("OneDev program is too old, please use a newer version");
 							
-						}, new LineConsumer() {
+							String timestamp = DateTimeFormat.forPattern(BACKUP_DATETIME_FORMAT).print(new DateTime());
+							File programBackup = new File(upgradeDir, "site/program-backup/" + timestamp);
+							FileUtils.createDir(programBackup);
 
-							@Override
-							public void consume(String line) {
-								logger.error(prefixUpgradeTargetLog(line));
-							}
-							
-						}).getReturnCode();
-						
-						if (ret == 0) {
-							dbChanged = true;
-							if (isHSQL) { 
-								FileUtils.deleteDir(new File(upgradeDir, "internaldb"), 3);
-							} else {
-								logger.info("Cleaning database with old program...");
-								
-								ret = buildCommandline(upgradeDir, "clean-db").execute(new LineConsumer() {
-									
-									@Override
-									public void consume(String line) {
-										logger.info(prefixUpgradeTargetLog(line));
+							logger.info("Backing up old program files as {}...", programBackup.getAbsolutePath());
+							try {
+								for (File each : upgradeDir.listFiles()) {
+									if (each.isFile()) {
+										FileUtils.copyFileToDirectory(each, programBackup);
+									} else if (!each.getName().equals("temp")
+											&& !each.getName().equals("site")
+											&& !each.getName().equals("internaldb")) {
+										FileUtils.copyDirectoryToDirectory(each, programBackup);
 									}
-									
-								}, new LineConsumer() {
-			
-									@Override
-									public void consume(String line) {
-										logger.error(prefixUpgradeTargetLog(line));
-									}
-									
-								}).getReturnCode();
+								}
+							} catch (IOException e) {
+								throw new RuntimeException(e);
 							}
-							if (ret == 0)
-								dbCleaned = true;
-						}
-						
-						if (ret == 0) {
-							logger.info("Updating program files...");
-							updateProgramFiles(upgradeDir, oldDataVersion);
+							restoreExecutables(programBackup);
 
-							logger.info("Restoring database with new program...");
-							ret = buildCommandline(upgradeDir, "restore-db", dbBackupFile.getAbsolutePath()).execute(new LineConsumer() {
+							File dbBackupFile = new File(upgradeDir, "site/" + DB_BACKUP_DIR + "/" + timestamp + ".zip");
+							boolean isHSQL = HibernateConfig.isHSQLDialect(getDialect(upgradeDir));
+							boolean failed = false;
+							boolean dbChanged = false;
+							boolean dbCleaned = false;
+							try {
+								if (dbDataVersion != newAppDataVersion) {
+									logger.info("Backing up database as {}...", dbBackupFile.getAbsolutePath());
 
-								@Override
-								public void consume(String line) {
-									logger.info(prefixUpgradeTargetLog(line));
-								}
-								
-							}, new LineConsumer() {
+									FileUtils.createDir(dbBackupFile.getParentFile());
 
-								@Override
-								public void consume(String line) {
-									logger.error(prefixUpgradeTargetLog(line));
-								}
-								
-							}).getReturnCode();
-						}
-						
-						if (ret != 0) {
-							logger.error("Failed to upgrade {}", upgradeDir.getAbsolutePath());
-							dbCleaned = getDataVersion(upgradeDir) == -1;
-							failed = true;
-						} else {
-							dbCleaned = false;
-						}
-					} else {
-						logger.info("Copying new program files into {}...", upgradeDir.getAbsolutePath());
-						updateProgramFiles(upgradeDir, oldDataVersion);
-					}
-				} catch (Exception e) {
-					logger.error("Error upgrading " + upgradeDir.getAbsolutePath(), e);
-					failed = true;
-				}
-				
-				if (failed) {
-					if (dbChanged && !dbCleaned) {
-						logger.info("Cleaning database with new program...");
-						try {
-							buildCommandline(upgradeDir, "clean-db").execute(new LineConsumer() {
-								
-								@Override
-								public void consume(String line) {
-									logger.info(prefixUpgradeTargetLog(line));
-								}
-								
-							}, new LineConsumer() {
-		
-								@Override
-								public void consume(String line) {
-									logger.error(prefixUpgradeTargetLog(line));
-								}
-								
-							}).checkReturnCode();
-							
-							dbCleaned = true;
-						} catch (Exception e) {
-							logger.error("Error cleaning database", e);
-						}
-					}
-					
-					boolean programRestored = false;
-					logger.info("Restoring old program files...");
-					try {
-						for (File child: programBackup.listFiles()) {
-							if (!child.getName().equals("site")) {
-								File target = new File(upgradeDir, child.getName());
-								if (target.isDirectory()) {
-									FileUtils.cleanDir(target);
-									FileUtils.copyDirectory(child, target);
+									int ret = buildCommandline(upgradeDir, "backup-db", dbBackupFile.getAbsolutePath()).execute(new LineConsumer() {
+
+										@Override
+										public void consume(String line) {
+											logger.info(prefixUpgradeTargetLog(line));
+										}
+
+									}, new LineConsumer() {
+
+										@Override
+										public void consume(String line) {
+											logger.error(prefixUpgradeTargetLog(line));
+										}
+
+									}).getReturnCode();
+
+									if (ret == 0) {
+										dbChanged = true;
+										if (isHSQL) {
+											FileUtils.deleteDir(new File(upgradeDir, "internaldb"), 3);
+										} else {
+											logger.info("Cleaning database with old program...");
+
+											ret = buildCommandline(upgradeDir, "clean-db").execute(new LineConsumer() {
+
+												@Override
+												public void consume(String line) {
+													logger.info(prefixUpgradeTargetLog(line));
+												}
+
+											}, new LineConsumer() {
+
+												@Override
+												public void consume(String line) {
+													logger.error(prefixUpgradeTargetLog(line));
+												}
+
+											}).getReturnCode();
+										}
+										if (ret == 0)
+											dbCleaned = true;
+									}
+
+									if (ret == 0) {
+										logger.info("Updating program files...");
+										updateProgramFiles(upgradeDir, oldAppDataVersion);
+
+										logger.info("Restoring database with new program...");
+										ret = buildCommandline(upgradeDir, "restore-db", dbBackupFile.getAbsolutePath()).execute(new LineConsumer() {
+
+											@Override
+											public void consume(String line) {
+												logger.info(prefixUpgradeTargetLog(line));
+											}
+
+										}, new LineConsumer() {
+
+											@Override
+											public void consume(String line) {
+												logger.error(prefixUpgradeTargetLog(line));
+											}
+
+										}).getReturnCode();
+									}
+
+									if (ret != 0) {
+										logger.error("Failed to upgrade {}", upgradeDir.getAbsolutePath());
+										dbCleaned = getDataVersion(upgradeDir).db == 0;
+										failed = true;
+									} else {
+										dbCleaned = false;
+									}
 								} else {
-									FileUtils.copyFile(child, target);
+									logger.info("Copying new program files into {}...", upgradeDir.getAbsolutePath());
+									updateProgramFiles(upgradeDir, oldAppDataVersion);
 								}
+							} catch (Exception e) {
+								logger.error("Error upgrading " + upgradeDir.getAbsolutePath(), e);
+								failed = true;
 							}
-						}
-						
-						if (oldDataVersion <= 102) 
-							FileUtils.createDir(new File(upgradeDir, "site/assets/root"));
-						
-						restoreExecutables(upgradeDir);
-						FileUtils.deleteDir(programBackup);
-						
-						logger.info("Old program files restored");
-						programRestored = true;
-					} catch (Exception e) {
-						logger.error("Error restoring old program files", e);
-						logger.warn("Please restore manually from \"{}\"", programBackup.getAbsolutePath());
-					}
-					
-					if (programRestored && dbChanged && dbCleaned) {
-						logger.info("Restoring old database...");
-						try {
-							buildCommandline(upgradeDir, "restore-db", dbBackupFile.getAbsolutePath(), "false").execute(new LineConsumer() {
-	
-								@Override
-								public void consume(String line) {
-									logger.info(prefixUpgradeTargetLog(line));
+
+							if (failed) {
+								if (dbChanged && !dbCleaned) {
+									logger.info("Cleaning database with new program...");
+									try {
+										buildCommandline(upgradeDir, "clean-db").execute(new LineConsumer() {
+
+											@Override
+											public void consume(String line) {
+												logger.info(prefixUpgradeTargetLog(line));
+											}
+
+										}, new LineConsumer() {
+
+											@Override
+											public void consume(String line) {
+												logger.error(prefixUpgradeTargetLog(line));
+											}
+
+										}).checkReturnCode();
+
+										dbCleaned = true;
+									} catch (Exception e) {
+										logger.error("Error cleaning database", e);
+									}
+								}
+
+								boolean programRestored = false;
+								logger.info("Restoring old program files...");
+								try {
+									for (File file : programBackup.listFiles()) {
+										if (!file.getName().equals("site")) 
+											restoreProgramFiles(file, new File(upgradeDir, file.getName()));
+									}
+
+									if (oldAppDataVersion <= 102)
+										FileUtils.createDir(new File(upgradeDir, "site/assets/root"));
+
+									restoreExecutables(upgradeDir);
+									FileUtils.deleteDir(programBackup);
+
+									logger.info("Old program files restored");
+									programRestored = true;
+								} catch (Exception e) {
+									logger.error("Error restoring old program files", e);
+									logger.warn("Please restore manually from \"{}\"", programBackup.getAbsolutePath());
+								}
+
+								if (programRestored && dbChanged && dbCleaned) {
+									logger.info("Restoring old database...");
+									try {
+										buildCommandline(upgradeDir, "restore-db", dbBackupFile.getAbsolutePath()).execute(new LineConsumer() {
+
+											@Override
+											public void consume(String line) {
+												logger.info(prefixUpgradeTargetLog(line));
+											}
+
+										}, new LineConsumer() {
+
+											@Override
+											public void consume(String line) {
+												logger.error(prefixUpgradeTargetLog(line));
+											}
+
+										}).checkReturnCode();
+
+										logger.info("Old database restored");
+										dbChanged = false;
+									} catch (Exception e) {
+										logger.error("Error restoring old database", e);
+									}
 								}
 								
-							}, new LineConsumer() {
-	
-								@Override
-								public void consume(String line) {
-									logger.error(prefixUpgradeTargetLog(line));
+								StringBuilder errorMessage = new StringBuilder(String.format("!! Failed to upgrade %s", upgradeDir.getAbsolutePath()));
+								if (dbChanged) {
+									if (inDocker)
+										errorMessage.append("\nOneDev is unable to restore old database, please do it manually by first resetting it (delete and create), and then exec into the container to run below command:");
+									else
+										errorMessage.append("\nOneDev is unable to restore old database, please do it manually by first resetting it (delete and create), and then running below command:");										
+									if (SystemUtils.IS_OS_WINDOWS) 
+										errorMessage.append("\n" + upgradeDir.getAbsolutePath() + File.separator + "bin" + File.separator + "restore-db.bat " + dbBackupFile.getAbsolutePath());
+									else 
+										errorMessage.append("\n" + upgradeDir.getAbsolutePath() + File.separator + "bin" + File.separator + "restore-db.sh " + dbBackupFile.getAbsolutePath());
 								}
-								
-							}).checkReturnCode();
-							
-							logger.info("Old database restored");
-							dbChanged = false;
-						} catch (Exception e) {
-							logger.error("Error restoring old database", e);
+								throw new ExplicitException(errorMessage.toString());
+							} else {
+								logger.info("Successfully upgraded {}", upgradeDir.getAbsolutePath());
+								FileUtils.deleteDir(programBackup);
+							}
+							return null;
 						}
-					}
+					};
 					
-					logger.error("️!! Failed to upgrade {}", upgradeDir.getAbsolutePath());
-					if (dbChanged) {
-						logger.warn("OneDev is unable to restore old database, please do it manually by first resetting it (delete and create), and then running below command:");
-						if (SystemUtils.IS_OS_WINDOWS) {
-							logger.info(upgradeDir.getAbsolutePath() + File.separator + "bin" + File.separator + "restore-db.bat " + dbBackupFile.getAbsolutePath());
+					var maintenanceFile = OneDev.getMaintenanceFile(upgradeDir);
+					FileUtils.touchFile(maintenanceFile);
+					try {
+						var hibernateConfig = new HibernateConfig(upgradeDir);
+						if (!hibernateConfig.isHSQLDialect()) {
+							var classLoader = newSiteLibClassLoader(upgradeDir);
+							try (var conn = openConnection(hibernateConfig, classLoader)) {
+								callWithLock(conn, () -> callable.call());
+							}
 						} else {
-							logger.info(upgradeDir.getAbsolutePath() + File.separator + "bin" + File.separator + "restore-db.sh " + dbBackupFile.getAbsolutePath());
+							callable.call();
+						}
+					} finally {
+						FileUtils.deleteFile(maintenanceFile);
+					}
+					System.exit(0);
+				} catch (Exception e) {
+					var explicitException = ExceptionUtils.find(e, ExplicitException.class);
+					if (explicitException != null)
+						logger.error(e.getMessage());
+					else 
+						logger.error("Error upgrading '" + upgradeDir.getAbsolutePath() + "'", e);
+					if (inDocker) {
+						logger.info("*** After solving the problem, please restart container with correct image ***");
+						// loop here to make container active so that user can exec into the container to 
+						// solve problem
+						while (true) {
+							try {
+								Thread.sleep(5000);
+							} catch (InterruptedException ex) {
+								break;
+							}
 						}
 					}
 					System.exit(1);
-				} else {
-					logger.info("Successfully upgraded {}", upgradeDir.getAbsolutePath());
-					
-					if (oldDataVersion <= 5) {
-						logger.warn("\n"
-								+ "************************* IMPORTANT NOTICE *************************\n"
-								+ "* OneDev password hash algorithm has been changed for security    *\n"
-								+ "* reason. Please reset administrator password with the             *\n"
-								+ "* reset_admin_password command. Other users' password will be      *\n"
-								+ "* reset and sent to their mail box automatically when they logs    *\n"
-								+ "* into OneDev.                                                    *\n"
-								+ "********************************************************************");
-					}
-					FileUtils.deleteDir(programBackup);
-					System.exit(0);
-				}			
+				}
 			} else {
 				logger.info("Successfully checked {}", upgradeDir.getAbsolutePath());
 				System.exit(0);
@@ -519,7 +565,42 @@ public class Upgrade extends AbstractPlugin {
 		}
 	}
 	
-	protected void updateProgramFiles(File upgradeDir, int oldDataVersion) {
+	private void restoreProgramFiles(File srcFile, File destFile) {
+		if (srcFile.isDirectory()) {
+			if (destFile.isDirectory()) {
+				for (var destChildFile: destFile.listFiles()) {
+					var srcChildFile = new File(srcFile, destChildFile.getName());
+					if (!srcChildFile.exists()) {
+						if (destChildFile.isFile())
+							FileUtils.deleteFile(destChildFile);
+						else 
+							FileUtils.deleteDir(destChildFile);
+					}
+				}
+			} else {
+				if (destFile.isFile())
+					FileUtils.deleteFile(destFile);
+				FileUtils.createDir(destFile);
+			}
+			for (var srcChildFile: srcFile.listFiles())
+				restoreProgramFiles(srcChildFile, new File(destFile, srcChildFile.getName()));
+		} else try {
+			if (destFile.isDirectory())
+				FileUtils.deleteDir(destFile);
+			if (destFile.exists()) {
+				if (destFile.canWrite())
+					FileUtils.copyFile(srcFile, destFile);
+				else if (!Arrays.equals(FileUtils.readFileToByteArray(srcFile), FileUtils.readFileToByteArray(destFile)))
+					throw new ExplicitException("Readonly file has been changed during upgrade: " + destFile.getAbsolutePath());
+			} else {
+				FileUtils.copyFile(srcFile, destFile);
+			}
+		} catch (IOException e) {
+			throw new RuntimeException(e);
+		}
+	}
+	
+	protected void updateProgramFiles(File upgradeDir, int oldAppDataVersion) {
 		cleanAndCopy(new File(Bootstrap.installDir, "3rdparty-licenses"), new File(upgradeDir, "3rdparty-licenses"));
 
 		File siteServerScriptFile = new File(upgradeDir, "bin/server.sh");
@@ -569,7 +650,7 @@ public class Upgrade extends AbstractPlugin {
 						}
 					}
 					if (serverScript != null)
-						FileUtils.writeStringToFile(siteServerScriptFile, serverScript, Charset.defaultCharset());
+						writeStringToFile(siteServerScriptFile, serverScript, Charset.defaultCharset());
 					else 
 						FileUtils.copyFile(file, new File(upgradeDir, "bin/" + file.getName()));
 				} catch (IOException e) {
@@ -657,7 +738,7 @@ public class Upgrade extends AbstractPlugin {
 			}
 		}
 		
-		if (oldDataVersion <= 102) {
+		if (oldAppDataVersion <= 102) {
 			File assetsRootDir = new File(upgradeDir, "site/assets/root");
 			FileUtils.createDir(assetsRootDir);
 			if (new File(upgradeDir, "site/assets/robots.txt").exists()) {
@@ -702,9 +783,123 @@ public class Upgrade extends AbstractPlugin {
 			FileUtils.deleteDir(new File(upgradeDir, "site/info"));
 		}
 
+		var directoryVersion = ".onedev-directory-version";
+		if (oldAppDataVersion <= 118) {
+			logger.info("Upgrading build storage directory...");
+			var projectsDir = new File(upgradeDir, "site/projects");
+			if (projectsDir.exists()) {
+				for (var projectDir : projectsDir.listFiles()) {
+					if (projectDir.getName().equals(directoryVersion))
+						continue;
+					logger.info("Processing project with id '" + projectDir.getName() + "'...");
+					var buildsDir = new File(projectDir, "builds");
+					if (buildsDir.exists()) {
+						for (var buildDir : buildsDir.listFiles()) {
+							if (!NumberUtils.isDigits(buildDir.getName()))
+								continue;
+							var buildNumber = parseInt(buildDir.getName());
+							File suffixDir = new File(buildsDir, String.format("s%03d", buildNumber % 1000));
+							FileUtils.createDir(suffixDir);
+							var newBuildDir = new File(suffixDir, valueOf(buildNumber));
+							if (!newBuildDir.exists()) {
+								try {
+									FileUtils.moveDirectory(buildDir, newBuildDir);
+								} catch (IOException e) {
+									throw new RuntimeException(e);
+								}
+							}
+							if (buildDir.exists()) {
+								try {
+									FileUtils.copyDirectory(buildDir, newBuildDir);
+								} catch (IOException e) {
+									throw new RuntimeException(e);
+								}
+								FileUtils.deleteDir(buildDir);
+							}
+						}
+					}
+				}
+				for (var projectDir : projectsDir.listFiles()) {
+					if (projectDir.getName().equals(directoryVersion))
+						continue;
+					var buildsDir = new File(projectDir, "builds");
+					try {
+						writeStringToFile(new File(projectDir, directoryVersion), "10000", UTF_8);
+						var attachmentDir = new File(projectDir, "attachment");
+						if (attachmentDir.exists()) {
+							writeStringToFile(new File(attachmentDir, directoryVersion), "10000", UTF_8);
+							var permanentDir = new File(attachmentDir, "permanent");
+							if (permanentDir.exists()) {
+								writeStringToFile(new File(permanentDir, directoryVersion), "10000", UTF_8);
+								for (var prefixDir : permanentDir.listFiles()) {
+									if (prefixDir.getName().equals(directoryVersion))
+										continue;
+									writeStringToFile(new File(prefixDir, directoryVersion), "10000", UTF_8);
+									for (var groupDir : prefixDir.listFiles()) {
+										if (groupDir.getName().equals(directoryVersion))
+											continue;
+										writeStringToFile(new File(groupDir, directoryVersion), "10000", UTF_8);
+									}
+								}
+							}
+						}
+						var gitDir = new File(projectDir, "git");
+						if (gitDir.exists())
+							writeStringToFile(new File(gitDir, directoryVersion), "10000", UTF_8);
+						var siteDir = new File(projectDir, "site");
+						if (siteDir.exists())
+							writeStringToFile(new File(siteDir, directoryVersion), "10000", UTF_8);
+						if (buildsDir.exists()) {
+							writeStringToFile(new File(buildsDir, directoryVersion), "10000", UTF_8);
+							for (var suffixDir : buildsDir.listFiles()) {
+								if (suffixDir.getName().equals(directoryVersion))
+									continue;
+								writeStringToFile(new File(suffixDir, directoryVersion), "10000", UTF_8);
+								for (var buildDir : suffixDir.listFiles()) {
+									if (buildDir.getName().equals(directoryVersion))
+										continue;
+									writeStringToFile(new File(buildDir, directoryVersion), "10000", UTF_8);
+									var artifactsDir = new File(buildDir, "artifacts");
+									if (artifactsDir.exists())
+										writeStringToFile(new File(artifactsDir, directoryVersion), "10000", UTF_8);
+									var markdownDir = new File(buildDir, "markdown");
+									if (markdownDir.exists())
+										writeStringToFile(new File(markdownDir, directoryVersion), "10000", UTF_8);
+									var pullRequestMarkdownDir = new File(buildDir, "pull-request-markdown");
+									if (pullRequestMarkdownDir.exists())
+										writeStringToFile(new File(pullRequestMarkdownDir, directoryVersion), "10000", UTF_8);
+									var unitTestDir = new File(buildDir, "unit-test");
+									if (unitTestDir.exists())
+										writeStringToFile(new File(unitTestDir, directoryVersion), "10000", UTF_8);
+									var problemDir = new File(buildDir, "problem");
+									if (problemDir.exists())
+										writeStringToFile(new File(problemDir, directoryVersion), "10000", UTF_8);
+									var coverageDir = new File(buildDir, "coverage");
+									if (coverageDir.exists())
+										writeStringToFile(new File(coverageDir, directoryVersion), "10000", UTF_8);
+								}
+							}
+						}
+					} catch (IOException e) {
+						throw new RuntimeException(e);
+					}
+				}
+			}
+		}
+		
+		if (oldAppDataVersion < 142) {
+			try {
+				FileUtils.copyFile(
+						new File(Bootstrap.getSiteDir(), "assets/robots.txt"), 
+						new File(upgradeDir, "site/assets/robots.txt"));
+			} catch (IOException e) {
+				throw new RuntimeException(e);
+			}
+		}
+
 		try {
 			File wrapperConfFile = new File(upgradeDir, "conf/wrapper.conf");
-			String wrapperConf = FileUtils.readFileToString(wrapperConfFile, StandardCharsets.UTF_8);
+			String wrapperConf = FileUtils.readFileToString(wrapperConfFile, UTF_8);
 			wrapperConf = StringUtils.replace(wrapperConf, "com.gitplex.commons.bootstrap.Bootstrap", 
 					"io.onedev.commons.launcher.bootstrap.Bootstrap");
 			wrapperConf = StringUtils.replace(wrapperConf, "com.gitplex.launcher.bootstrap.Bootstrap", 
@@ -734,10 +929,27 @@ public class Upgrade extends AbstractPlugin {
 
 			wrapperConf = wrapperConf.replaceAll("\r\n(\r\n)+\r\n", "\r\n\r\n");
 			
-			FileUtils.writeStringToFile(wrapperConfFile, wrapperConf, StandardCharsets.UTF_8);
+			var lines = Splitter.on('\n').trimResults().splitToList(wrapperConf);
+			if (lines.stream().noneMatch(it -> it.contains("-XX:MaxRAMPercentage"))) {
+				lines = new ArrayList<>(lines);
+				lines.removeIf(line -> line.contains("Maximum Java Heap Size (in MB)") || line.contains("wrapper.java.maxmemory"));
+
+				int appendIndex = lines.size();
+				for (int i=0; i<lines.size(); i++) {
+					if (lines.get(i).contains("wrapper.java.additional.50")) {
+						appendIndex = i+1;
+						break;
+					}
+				}
+				lines.add(appendIndex, "set.default.max_memory_percent=50");
+				lines.add(appendIndex, "");
+				lines.add(appendIndex, "wrapper.java.additional.100=-XX:MaxRAMPercentage=%max_memory_percent%");
+			}
+			
+			FileUtils.writeLines(wrapperConfFile, UTF_8.name(), lines);
 			
 			File hibernatePropsFile = new File(upgradeDir, "conf/hibernate.properties");
-			String hibernateProps = FileUtils.readFileToString(hibernatePropsFile, StandardCharsets.UTF_8);
+			String hibernateProps = FileUtils.readFileToString(hibernatePropsFile, UTF_8);
 			hibernateProps = StringUtils.replace(hibernateProps, "hibernate.hikari.autoCommit=false", 
 					"hibernate.hikari.autoCommit=true");
 			hibernateProps = StringUtils.replace(hibernateProps, "GitPlex", "OneDev");
@@ -780,26 +992,23 @@ public class Upgrade extends AbstractPlugin {
 			hibernateProps = StringUtils.replace(hibernateProps, 
 					"hibernate.javax.cache.missing_cache_strategy=create", 
 					"");
-			hibernateProps = StringUtils.replace(hibernateProps, 
-					"org.hibernate.dialect.Oracle12cDialect", 
-					"io.onedev.server.persistence.OracleDialect");
 			
 			hibernateProps = hibernateProps.replaceAll("\r\n(\r\n)+\r\n", "\r\n\r\n");
 			
-			FileUtils.writeStringToFile(hibernatePropsFile, hibernateProps, StandardCharsets.UTF_8);
+			writeStringToFile(hibernatePropsFile, hibernateProps, UTF_8);
 			
 			File serverPropsFile = new File(upgradeDir, "conf/server.properties");
-			String serverProps = FileUtils.readFileToString(serverPropsFile, StandardCharsets.UTF_8);
+			String serverProps = FileUtils.readFileToString(serverPropsFile, UTF_8);
 			if (serverProps.contains("sessionTimeout")) 
 				FileUtils.copyFile(new File(Bootstrap.getConfDir(), "server.properties"), serverPropsFile);
-			serverProps = FileUtils.readFileToString(serverPropsFile, StandardCharsets.UTF_8);
+			serverProps = FileUtils.readFileToString(serverPropsFile, UTF_8);
 			if (!serverProps.contains("ssh_port")) {
 				serverProps += String.format("%n%nssh_port: 6611%n");
-				FileUtils.writeStringToFile(serverPropsFile, serverProps, StandardCharsets.UTF_8);
+				writeStringToFile(serverPropsFile, serverProps, UTF_8);
 			}
 
 			File logbackConfigFile = new File(upgradeDir, "conf/logback.xml");
-			String logbackConfig = FileUtils.readFileToString(logbackConfigFile, StandardCharsets.UTF_8);
+			String logbackConfig = FileUtils.readFileToString(logbackConfigFile, UTF_8);
 			if (!logbackConfig.contains("AggregatedServiceLoader") 
 					|| !logbackConfig.contains("com.hazelcast.cp.CPSubsystem")) { 
 				FileUtils.copyFile(new File(Bootstrap.getConfDir(), "logback.xml"), logbackConfigFile);
@@ -810,7 +1019,7 @@ public class Upgrade extends AbstractPlugin {
 				FileUtils.deleteFile(sampleKeystoreFile);
 			
 			logbackConfigFile = new File(upgradeDir, "conf/logback.xml");
-			logbackConfig = FileUtils.readFileToString(logbackConfigFile, StandardCharsets.UTF_8);
+			logbackConfig = FileUtils.readFileToString(logbackConfigFile, UTF_8);
 			logbackConfig = StringUtils.replace(logbackConfig, 
 					"<triggeringPolicy class=\"ch.qos.logback.core.rolling.SizeBasedTriggeringPolicy\"/>", 
 					"<triggeringPolicy class=\"ch.qos.logback.core.rolling.SizeBasedTriggeringPolicy\"><maxFileSize>1MB</maxFileSize></triggeringPolicy>");
@@ -830,7 +1039,7 @@ public class Upgrade extends AbstractPlugin {
 						"</pattern>\n			</layout>");
 			}
 			
-			FileUtils.writeStringToFile(logbackConfigFile, logbackConfig, StandardCharsets.UTF_8);
+			writeStringToFile(logbackConfigFile, logbackConfig, UTF_8);
 			
 			FileUtils.copyFile(new File(Bootstrap.installDir, "conf/wrapper-license.conf"), 
 					new File(upgradeDir, "conf/wrapper-license.conf"));
@@ -838,16 +1047,16 @@ public class Upgrade extends AbstractPlugin {
 			FileUtils.copyFile(new File(Bootstrap.installDir, "license.txt"), new File(upgradeDir, "license.txt"));
 			FileUtils.copyFile(new File(Bootstrap.installDir, RELEASE_PROPS_FILE), new File(upgradeDir, RELEASE_PROPS_FILE));
 
-			FileUtils.createDir(new File(Bootstrap.installDir, INCOMPATIBILITIES).getParentFile());
-			if (new File(upgradeDir, INCOMPATIBILITIES_SINCE_UPGRADED_VERSION).exists())
-				FileUtils.deleteFile(new File(upgradeDir, INCOMPATIBILITIES_SINCE_UPGRADED_VERSION));
-			if (new File(upgradeDir, CHECKED_INCOMPATIBILITIES_SINCE_UPGRADED_VERSION).exists())
-				FileUtils.deleteFile(new File(upgradeDir, CHECKED_INCOMPATIBILITIES_SINCE_UPGRADED_VERSION));
+			FileUtils.createDir(new File(Bootstrap.installDir, INCOMPATIBILITIES_FILE).getParentFile());
+			if (new File(upgradeDir, INCOMPATIBILITIES_SINCE_UPGRADED_VERSION_FILE).exists())
+				FileUtils.deleteFile(new File(upgradeDir, INCOMPATIBILITIES_SINCE_UPGRADED_VERSION_FILE));
+			if (new File(upgradeDir, CHECKED_INCOMPATIBILITIES_SINCE_UPGRADED_VERSION_FILE).exists())
+				FileUtils.deleteFile(new File(upgradeDir, CHECKED_INCOMPATIBILITIES_SINCE_UPGRADED_VERSION_FILE));
 			List<String> incompatibilities = FileUtils.readLines(
-					new File(Bootstrap.installDir, INCOMPATIBILITIES), StandardCharsets.UTF_8);
-			if (new File(upgradeDir, INCOMPATIBILITIES).exists()) {
+					new File(Bootstrap.installDir, INCOMPATIBILITIES_FILE), UTF_8);
+			if (new File(upgradeDir, INCOMPATIBILITIES_FILE).exists()) {
 				String lastIncompatibilityVersion = null;
-				for (var line: FileUtils.readLines(new File(upgradeDir, INCOMPATIBILITIES), StandardCharsets.UTF_8)) {
+				for (var line: FileUtils.readLines(new File(upgradeDir, INCOMPATIBILITIES_FILE), UTF_8)) {
 					if (line.trim().startsWith("# ")) {
 						lastIncompatibilityVersion = line.trim().substring(1).trim();
 						break;
@@ -866,13 +1075,15 @@ public class Upgrade extends AbstractPlugin {
 					}
 					if (!incompatibilitiesSinceUpgradedVersion.isEmpty()) {
 						FileUtils.writeFile(
-								new File(upgradeDir, INCOMPATIBILITIES_SINCE_UPGRADED_VERSION), 
+								new File(upgradeDir, INCOMPATIBILITIES_SINCE_UPGRADED_VERSION_FILE), 
 								Joiner.on("\n").join(incompatibilitiesSinceUpgradedVersion));
 					}
 				}
 			}
-			FileUtils.copyFile(new File(Bootstrap.installDir, INCOMPATIBILITIES), 
-					new File(upgradeDir, INCOMPATIBILITIES));
+			
+			FileUtils.copyDirectory(
+					new File(Bootstrap.installDir, INCOMPATIBILITIES_DIR), 
+					new File(upgradeDir, INCOMPATIBILITIES_DIR));
 		} catch (IOException e) {
 			throw new RuntimeException(e);
 		}
@@ -902,5 +1113,10 @@ public class Upgrade extends AbstractPlugin {
 	@Override
 	public void stop() {
 	}
-
+	
+	static class DataVersion {
+		int app = -1;
+		
+		int db = -1;
+	}
 }
